[package]
name = "leonidas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
linkify = "0.10.0"
regex = "1.9.6"
reqwest = "0.11.20"
serde = "1.0.188"
serde_json = "1.0.107"
serenity = { version = "0.11", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tiktoken-rs = "0.5.4"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
