[package]
name = "leonidas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
linkify = "0.10.0"
regex = "1.9.6"
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
serde_json = "1.0.107"
serenity = { git = "https://github.com/serenity-rs/serenity.git", rev = "7025a807e32a73341b4cc6276ff6c2a159b58b1a", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tiktoken-rs = "0.5.4"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
